@@ -1,10 +1,12 @@
 package net.luis.xores.data.provider.block;
 
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 import net.luis.xores.XOres;
 import net.luis.xores.world.level.block.XOBlocks;
 import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.block.Block;
 import net.minecraftforge.client.model.generators.BlockStateProvider;
@@ -14,6 +16,7 @@ import net.minecraftforge.client.model.generators.ModelFile.ExistingModelFile;
 import net.minecraftforge.common.data.ExistingFileHelper;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
+import org.jetbrains.annotations.NotNull;
 
 /**
  * 
@@ -26,13 +29,13 @@ public class XOBlockStateProvider extends BlockStateProvider {
 	private final ExistingFileHelper existingFileHelper;
 	
 	public XOBlockStateProvider(DataGenerator generator, ExistingFileHelper existingFileHelper) {
-		super(generator, XOres.MOD_ID, existingFileHelper);
+		super(generator.getPackOutput(), XOres.MOD_ID, existingFileHelper);
 		this.existingFileHelper = existingFileHelper;
 	}
 	
 	@Override
 	protected void registerStatesAndModels() {
-		for (Block block : XOBlocks.BLOCKS.getEntries().stream().map(RegistryObject::get).collect(Collectors.toList())) {
+		for (Block block : XOBlocks.BLOCKS.getEntries().stream().map(RegistryObject::get).toList()) {
 			if (block == XOBlocks.ENDERITE_ORE.get()) {
 				this.columnBlock(block);
 			} else {
@@ -43,7 +46,8 @@ public class XOBlockStateProvider extends BlockStateProvider {
 	}
 	
 	private void columnBlock(Block block) {
-		ModelFile modelFile = this.models().cubeColumn(ForgeRegistries.BLOCKS.getKey(block).getPath(), new ResourceLocation(this.blockTexture(block).toString() + "_side"), new ResourceLocation(this.blockTexture(block).toString() + "_top"));
+		String name = Objects.requireNonNull(ForgeRegistries.BLOCKS.getKey(block)).getPath();
+		ModelFile modelFile = this.models().cubeColumn(name, new ResourceLocation(this.blockTexture(block).toString() + "_side"), new ResourceLocation(this.blockTexture(block).toString() + "_top"));
 		this.getVariantBuilder(block).partialState().setModels(new ConfiguredModel(modelFile));
 	}
 	
@@ -52,7 +56,7 @@ public class XOBlockStateProvider extends BlockStateProvider {
 	}
 	
 	@Override
-	public String getName() {
+	public @NotNull String getName() {
 		return "XOres Block States";
 	}
 	
